lainsafe conf update
lainsafe conf update

--- a/phpfilesafe.conf
+++ b/phpfilesafe.conf
@@ -31,7 +31,7 @@ server {
 	add_header X-Content-Type-Options nosniff; #MIME-type sniffing
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";	
 
-    root /var/www/html/filesafe;
+    root /var/www/html/lainsafe;
     index index.php;
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
