--- a/phpfilesafe_80_only.conf
+++ b/phpfilesafe_80_only.conf
@@ -5,6 +5,8 @@ server {
 
     root /var/www/html/lainsafe;
     index index.php;
+    client_max_body_size 150M;
+    client_body_buffer_size 256k;
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass   unix:/var/run/php/php7.3-fpm.sock;
