--- a/phpfilesafe_80_only.conf
+++ b/phpfilesafe_80_only.conf
@@ -5,8 +5,8 @@ server {
 
     root /var/www/html/lainsafe;
     index index.php;
-    client_max_body_size 150M;
-    client_body_buffer_size 256k;
+    #client_max_body_size 150M;
+    #client_body_buffer_size 100M;
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass   unix:/var/run/php/php7.3-fpm.sock;
@@ -14,4 +14,5 @@ server {
         fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include        fastcgi_params;
     }
+    client_max_body_size 150M;
 }
